# EitohForge

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  secure_backend_sdk_architecture.md
.github/workflows/: ci.yml  publish-internal.yml  publish-pypi.yml
docs/: README.md
docs/adr/: 0001-orm-and-migration-strategy.md  0002-typing-and-linting-strategy.md  0003-packaging-and-publish-strategy.md
docs/architecture/: platform-overview.md
docs/guides/: api-contract-envelope.md  cookbook.md  deployment-strategies-and-rollback-controls.md  enterprise-deployment-and-networking.md  enterprise-readiness-checklist.md  forge-profiles.md  load-balancing-and-health-routing.md  mtls-trust-model.md  multi-database-routing.md  multi-service-dev-and-environments.md  onboarding-qa-simulation.md  operations-runbook.md  phase-0-and-1-kickoff.md  plugins.md  policy.md  providers.md  python-packaging-and-publishing.md  query-spec-reference.md  realtime-websocket.md  repository-contracts-and-dto-boundaries.md  testing-and-example-project-strategy.md  tls-and-cert-rotation-runbook.md  usage-complete.md
docs/performance/: baseline.json  baseline.md
docs/releases/: v0.1.0-rc.md  v0.1.2.md  v0.1.4.md  v0.1.5.md  v0.1.6.md
docs/roadmap/: architecture-coverage-matrix.md  blueprint-completion-waves.md  execution-board.md  framework-evolution-v0.2-to-v1.md  master-implementation-roadmap.md
docs/standards/: engineering-standards.md  flaky-test-policy.md
examples/example-enterprise/: .env.example  README.md  forge.dev.json  pyproject.toml
examples/example-enterprise/example_enterprise/: __init__.py  main.py
examples/example-enterprise/tests/: test_smoke.py
examples/example-minimal/: .env.example  README.md  pyproject.toml
examples/example-minimal/example_minimal/: __init__.py  main.py
examples/example-minimal/tests/: test_smoke.py
scripts/: check_license_policy.py  check_migration_policy.py  performance_baseline.py  validate_packaging_metadata.py  verify_reproducible_build.py
src/eitohforge_cli/: __init__.py  main.py  templates.py
src/eitohforge_cli/commands/: config.py  create.py  db.py  dev.py  docs.py  doctor.py  feature_flags.py  ops.py
src/eitohforge_cli/template_parts/: __init__.py  application_templates.py  cache_templates.py  core_templates.py  core_templates_auth.py  core_templates_platform.py  core_templates_runtime.py  core_templates_security.py  core_templates_validation.py  crud_templates.py  domain_repository_templates.py  external_api_templates.py  generator_templates.py  jobs_templates.py  messaging_templates.py  notification_templates.py  search_templates.py  socket_templates.py  storage_templates.py  webhook_templates.py
src/eitohforge_sdk/: __init__.py
src/eitohforge_sdk/application/: __init__.py  query_spec_support.py
src/eitohforge_sdk/core/: __init__.py  abac.py  api_contract_middleware.py  api_version_deprecation.py  api_versioning.py  audit.py  capabilities.py  config.py  deployment.py  error_middleware.py  error_registry.py  feature_catalog.py  feature_flag_persistence.py  feature_flags.py  forge_application.py  forge_toggles.py  health.py  idempotency.py  observability.py  performance.py  (+12 more)
tests/contract/: test_api_contracts.py
tests/e2e/: test_scaffold_http_journey.py
tests/integration/: test_example_projects_smoke.py  test_generated_project.py
tests/migration/: test_scaffold_migration_layout.py
tests/performance/: test_perf_closure.py
tests/security/: test_security_closure.py
tests/unit/: test_abac_security.py  test_api_contract_middleware.py  test_api_response_models.py  test_api_version_deprecation.py  test_api_versioning.py  test_audit.py  test_background_jobs.py  test_cache_invalidation.py  test_cache_provider.py  test_capabilities.py  test_cli.py  test_cli_create_profile.py  test_config.py  test_crud_templates_golden.py  test_database_provider.py  test_db_commands.py  test_dev_command.py  test_domain_events.py  test_domain_value_objects.py  test_error_middleware.py  test_error_registry.py  test_event_bus.py  test_external_api_client.py  test_feature_flags.py  test_firebase_push_sender.py  test_forge_application.py  test_forge_toggles.py  test_gcp_secret_provider.py  test_health_endpoints.py  test_idempotency.py  test_inbound_webhook_http.py  test_job_publishers.py  test_jwt_manager.py  test_meilisearch_provider.py  test_memory_repository.py  test_migration_policy_script.py  test_notification_facade.py  test_notification_templates.py  test_notifications.py  test_observability.py  (+36 more)
(+114 files in other folders)
